--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -16,3 +16,11 @@
 	border-radius: 20px;
   }
  
+
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+	  transition: background-color 5000000s ease-in-out 0s;
+  }
